# Lyra

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  OSS_PREPARATION.md  PLAN.md  PRODUCTION_FIXES.md  README.md  README_EN.md  README_ES.md  README_KO.md  README_ZH.md  SECURITY.md  pyproject.toml
cli/: main.py
core/: audio_io.py  key_detector.py
core/alignment/: dtw_aligner.py
core/onset/: beat_tracker.py  onset_detector.py  voiced_detector.py
core/pitch/: rmvpe_wrapper.py  torchcrepe_wrapper.py
core/pitch/rmvpe_src/src/: __init__.py  inference.py
core/recipe/: generator.py  schema.py
core/renderer/: rubberband_renderer.py
core/separation/: demucs_wrapper.py
docs/: design_notes.md  note_article.md
gui/: app.py  main_window.py  worker.py
gui/widgets/: pitch_view.py  segment_panel.py  warp_view.py
schemas/: recipe.v1.json
scripts/: download_models.py
tests/: test_integration.py  test_smoke.py
